<resources>

    <string name="app_name" translatable="false">LoftCoin</string>


    <string name="currencies_bottom_sheet_currency_name" translatable="false">%s | %s</string>
    <string name="rate_item_percent_change" translatable="false">%.2f%%</string>
    <string name="currency_amount" translatable="false">%s %s</string>

    <string name="usd_symbol" translatable="false">$</string>
    <string name="eur_symbol" translatable="false">€</string>
    <string name="rub_symbol" translatable="false">₽</string>

    <string name="rate_menu_usd_text">Dollar | USD</string>
    <string name="rate_menu_eur_text">Euro | EUR</string>
    <string name="rate_menu_rub_text" >Ruble | RUB</string>

    <string name="welcome_title_1">Buying and selling</string>
    <string name="welcome_title_2">Cryptocurrency rate</string>
    <string name="welcome_title_3">Converter</string>
    <string name="welcome_subtitle_1">Buy when cheap, sell when expensive.</string>
    <string name="welcome_subtitle_2">Follow the exchange rate and react to changes in price dynamics in time.</string>
    <string name="welcome_subtitle_3">Find out how much ethereum in 1.23 bitcoins.</string>
    <string name="welcome_start_btn">Start</string>

    <string name="main_bottom_navigation_item_accounts">Wallets</string>
    <string name="main_bottom_navigation_item_rate">Rate</string>
    <string name="main_bottom_navigation_item_converter">Converter</string>

    <string name="rate_screen_title">Cryptocurrencies rate</string>
    <string name="converter_screen_title">Converter</string>
    <string name="wallets_screen_title">Wallets</string>

    <string name="rate_menu_item_currency">Currency</string>
    <string name="rate_menu_title">Select currency</string>
    
    <string name="wallets_menu_new_wallet">New wallet</string>

    <string name="notification_rate_changed_body">Rate changed %s</string>
    <string name="notification_channel_rate_changed">Rate changes</string>

</resources>
